CHORE: Java 11 upgrade